Refactor process command structure and add execution commands for process management