@@ -1,357 +1,134 @@
 package com.leorces.engine;
 
-
-import com.leorces.engine.event.EngineEventBus;
-import com.leorces.engine.event.correlation.CorrelateMessageEvent;
-import com.leorces.engine.process.ProcessStartService;
-import com.leorces.engine.variables.VariableRuntimeService;
-import com.leorces.model.definition.ProcessDefinition;
+import com.leorces.engine.core.CommandDispatcher;
+import com.leorces.engine.correlation.command.CorrelateMessageCommand;
+import com.leorces.engine.process.ProcessRuntimeService;
+import com.leorces.engine.variables.command.SetVariablesCommand;
 import com.leorces.model.runtime.process.Process;
-import com.leorces.model.runtime.process.ProcessState;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.context.ApplicationEvent;
 
-import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
-
-@DisplayName("RuntimeServiceImpl Unit Tests")
 @ExtendWith(MockitoExtension.class)
+@DisplayName("RuntimeServiceImpl Tests")
 class RuntimeServiceImplTest {
 
-    private static final String DEFINITION_ID = "test-definition-id";
-    private static final String DEFINITION_KEY = "test-definition-key";
-    private static final String BUSINESS_KEY = "test-business-key";
-    private static final String EXECUTION_ID = "test-execution-id";
-    private static final String MESSAGE_NAME = "test-message";
-    private static final String VARIABLE_KEY = "testKey";
-    private static final String VARIABLE_VALUE = "testValue";
-    private static final Map<String, Object> VARIABLES = Map.of(
-            "key1", "value1",
-            "key2", 42,
-            "key3", true
-    );
-    private static final Map<String, Object> CORRELATION_KEYS = Map.of(
-            "correlationKey1", "correlationValue1",
-            "correlationKey2", 123
-    );
+    @Mock
+    private ProcessRuntimeService processRuntimeService;
 
     @Mock
-    private VariableRuntimeService variableRuntimeService;
+    private CommandDispatcher dispatcher;
 
-    @Mock
-    private ProcessStartService processStartService;
+    @InjectMocks
+    private RuntimeServiceImpl service;
 
-    @Mock
-    private EngineEventBus eventBus;
+    @Test
+    @DisplayName("startProcessById delegates to ProcessRuntimeService")
+    void startProcessByIdDelegates() {
+        // Given
+        var definitionId = "def1";
+        var businessKey = "bk1";
+        Map<String, Object> vars = Map.of("a", 1);
+        var process = mock(Process.class);
+        when(processRuntimeService.startByDefinitionId(definitionId, businessKey, vars)).thenReturn(process);
 
-    @Mock
-    private ProcessDefinition processDefinition;
+        // When
+        var result = service.startProcessById(definitionId, businessKey, vars);
 
-    @Captor
-    private ArgumentCaptor<ApplicationEvent> eventCaptor;
-
-    private RuntimeServiceImpl runtimeService;
-
-    @BeforeEach
-    void setUp() {
-        runtimeService = new RuntimeServiceImpl(variableRuntimeService, processStartService, eventBus);
+        // Then
+        assertThat(result).isEqualTo(process);
+        verify(processRuntimeService).startByDefinitionId(definitionId, businessKey, vars);
+        verifyNoMoreInteractions(processRuntimeService);
     }
 
     @Test
-    @DisplayName("Should start process by definition id only")
-    void shouldStartProcessByDefinitionIdOnly() {
-        //Given
-        var expectedProcess = createTestProcess();
-        when(processStartService.startByDefinitionId(DEFINITION_ID, null, Collections.emptyMap()))
-                .thenReturn(expectedProcess);
+    @DisplayName("startProcessByKey delegates to ProcessRuntimeService")
+    void startProcessByKeyDelegates() {
+        // Given
+        var key = "key1";
+        var businessKey = "bk1";
+        Map<String, Object> vars = Map.of("a", 1);
+        var process = mock(Process.class);
+        when(processRuntimeService.startByDefinitionKey(key, businessKey, vars)).thenReturn(process);
 
-        //When
-        var result = runtimeService.startProcessById(DEFINITION_ID);
+        // When
+        var result = service.startProcessByKey(key, businessKey, vars);
 
-        //Then
-        assertThat(result).isNotNull();
-        assertThat(result).isEqualTo(expectedProcess);
-        verify(processStartService).startByDefinitionId(DEFINITION_ID, null, Collections.emptyMap());
+        // Then
+        assertThat(result).isEqualTo(process);
+        verify(processRuntimeService).startByDefinitionKey(key, businessKey, vars);
+        verifyNoMoreInteractions(processRuntimeService);
     }
 
     @Test
-    @DisplayName("Should start process by definition id with variables")
-    void shouldStartProcessByDefinitionIdWithVariables() {
-        //Given
-        var expectedProcess = createTestProcess();
-        when(processStartService.startByDefinitionId(DEFINITION_ID, null, VARIABLES))
-                .thenReturn(expectedProcess);
+    @DisplayName("setVariable delegates to dispatcher with correct command")
+    void setVariableDelegates() {
+        // Given
+        var executionId = "exec1";
+        var key = "var";
+        var value = 42;
 
-        //When
-        var result = runtimeService.startProcessById(DEFINITION_ID, VARIABLES);
+        // When
+        service.setVariable(executionId, key, value);
 
-        //Then
-        assertThat(result).isNotNull();
-        assertThat(result).isEqualTo(expectedProcess);
-        verify(processStartService).startByDefinitionId(DEFINITION_ID, null, VARIABLES);
+        // Then
+        var captor = ArgumentCaptor.forClass(SetVariablesCommand.class);
+        verify(dispatcher).dispatch(captor.capture());
+        var command = captor.getValue();
+        assertThat(command.executionId()).isEqualTo(executionId);
+        assertThat(command.variables()).containsEntry(key, value);
+        assertThat(command.local()).isFalse();
     }
 
     @Test
-    @DisplayName("Should start process by definition id with business key")
-    void shouldStartProcessByDefinitionIdWithBusinessKey() {
-        //Given
-        var expectedProcess = createTestProcess();
-        when(processStartService.startByDefinitionId(DEFINITION_ID, BUSINESS_KEY, Collections.emptyMap()))
-                .thenReturn(expectedProcess);
+    @DisplayName("setVariableLocal delegates to dispatcher with local flag")
+    void setVariableLocalDelegates() {
+        // Given
+        var executionId = "exec1";
+        var key = "var";
+        var value = 42;
 
-        //When
-        var result = runtimeService.startProcessById(DEFINITION_ID, BUSINESS_KEY);
+        // When
+        service.setVariableLocal(executionId, key, value);
 
-        //Then
-        assertThat(result).isNotNull();
-        assertThat(result).isEqualTo(expectedProcess);
-        verify(processStartService).startByDefinitionId(DEFINITION_ID, BUSINESS_KEY, Collections.emptyMap());
+        // Then
+        var captor = ArgumentCaptor.forClass(SetVariablesCommand.class);
+        verify(dispatcher).dispatch(captor.capture());
+        var command = captor.getValue();
+        assertThat(command.executionId()).isEqualTo(executionId);
+        assertThat(command.variables()).containsEntry(key, value);
+        assertThat(command.local()).isTrue();
     }
 
     @Test
-    @DisplayName("Should start process by definition id with business key and variables")
-    void shouldStartProcessByDefinitionIdWithBusinessKeyAndVariables() {
-        //Given
-        var expectedProcess = createTestProcess();
-        when(processStartService.startByDefinitionId(DEFINITION_ID, BUSINESS_KEY, VARIABLES))
-                .thenReturn(expectedProcess);
+    @DisplayName("correlateMessage delegates to dispatcher with correct command")
+    void correlateMessageDelegates() {
+        // Given
+        var messageName = "msg1";
+        var businessKey = "bk1";
+        Map<String, Object> correlationKeys = Map.of("c", 1);
+        Map<String, Object> processVariables = Map.of("p", 2);
 
-        //When
-        var result = runtimeService.startProcessById(DEFINITION_ID, BUSINESS_KEY, VARIABLES);
+        // When
+        service.correlateMessage(messageName, businessKey, correlationKeys, processVariables);
 
-        //Then
-        assertThat(result).isNotNull();
-        assertThat(result).isEqualTo(expectedProcess);
-        verify(processStartService).startByDefinitionId(DEFINITION_ID, BUSINESS_KEY, VARIABLES);
-    }
-
-    @Test
-    @DisplayName("Should start process by key only")
-    void shouldStartProcessByKeyOnly() {
-        //Given
-        var expectedProcess = createTestProcess();
-        when(processStartService.startByDefinitionKey(DEFINITION_KEY, null, Collections.emptyMap()))
-                .thenReturn(expectedProcess);
-
-        //When
-        var result = runtimeService.startProcessByKey(DEFINITION_KEY);
-
-        //Then
-        assertThat(result).isNotNull();
-        assertThat(result).isEqualTo(expectedProcess);
-        verify(processStartService).startByDefinitionKey(DEFINITION_KEY, null, Collections.emptyMap());
-    }
-
-    @Test
-    @DisplayName("Should start process by key with variables")
-    void shouldStartProcessByKeyWithVariables() {
-        //Given
-        var expectedProcess = createTestProcess();
-        when(processStartService.startByDefinitionKey(DEFINITION_KEY, null, VARIABLES))
-                .thenReturn(expectedProcess);
-
-        //When
-        var result = runtimeService.startProcessByKey(DEFINITION_KEY, VARIABLES);
-
-        //Then
-        assertThat(result).isNotNull();
-        assertThat(result).isEqualTo(expectedProcess);
-        verify(processStartService).startByDefinitionKey(DEFINITION_KEY, null, VARIABLES);
-    }
-
-    @Test
-    @DisplayName("Should start process by key with business key")
-    void shouldStartProcessByKeyWithBusinessKey() {
-        //Given
-        var expectedProcess = createTestProcess();
-        when(processStartService.startByDefinitionKey(DEFINITION_KEY, BUSINESS_KEY, Collections.emptyMap()))
-                .thenReturn(expectedProcess);
-
-        //When
-        var result = runtimeService.startProcessByKey(DEFINITION_KEY, BUSINESS_KEY);
-
-        //Then
-        assertThat(result).isNotNull();
-        assertThat(result).isEqualTo(expectedProcess);
-        verify(processStartService).startByDefinitionKey(DEFINITION_KEY, BUSINESS_KEY, Collections.emptyMap());
-    }
-
-    @Test
-    @DisplayName("Should start process by key with business key and variables")
-    void shouldStartProcessByKeyWithBusinessKeyAndVariables() {
-        //Given
-        var expectedProcess = createTestProcess();
-        when(processStartService.startByDefinitionKey(DEFINITION_KEY, BUSINESS_KEY, VARIABLES))
-                .thenReturn(expectedProcess);
-
-        //When
-        var result = runtimeService.startProcessByKey(DEFINITION_KEY, BUSINESS_KEY, VARIABLES);
-
-        //Then
-        assertThat(result).isNotNull();
-        assertThat(result).isEqualTo(expectedProcess);
-        verify(processStartService).startByDefinitionKey(DEFINITION_KEY, BUSINESS_KEY, VARIABLES);
-    }
-
-    @Test
-    @DisplayName("Should set single variable")
-    void shouldSetSingleVariable() {
-        //Given
-        var expectedVariableMap = Collections.<String, Object>singletonMap(VARIABLE_KEY, VARIABLE_VALUE);
-
-        //When
-        runtimeService.setVariable(EXECUTION_ID, VARIABLE_KEY, VARIABLE_VALUE);
-
-        //Then
-        verify(variableRuntimeService).setVariables(EXECUTION_ID, expectedVariableMap);
-    }
-
-    @Test
-    @DisplayName("Should set multiple variables")
-    void shouldSetMultipleVariables() {
-        //When
-        runtimeService.setVariables(EXECUTION_ID, VARIABLES);
-
-        //Then
-        verify(variableRuntimeService).setVariables(EXECUTION_ID, VARIABLES);
-    }
-
-    @Test
-    @DisplayName("Should set single local variable")
-    void shouldSetSingleLocalVariable() {
-        //Given
-        var expectedVariableMap = Collections.<String, Object>singletonMap(VARIABLE_KEY, VARIABLE_VALUE);
-
-        //When
-        runtimeService.setVariableLocal(EXECUTION_ID, VARIABLE_KEY, VARIABLE_VALUE);
-
-        //Then
-        verify(variableRuntimeService).setVariablesLocal(EXECUTION_ID, expectedVariableMap);
-    }
-
-    @Test
-    @DisplayName("Should set multiple local variables")
-    void shouldSetMultipleLocalVariables() {
-        //When
-        runtimeService.setVariablesLocal(EXECUTION_ID, VARIABLES);
-
-        //Then
-        verify(variableRuntimeService).setVariablesLocal(EXECUTION_ID, VARIABLES);
-    }
-
-    @Test
-    @DisplayName("Should correlate message with business key only")
-    void shouldCorrelateMessageWithBusinessKeyOnly() {
-        //When
-        runtimeService.correlateMessage(MESSAGE_NAME, BUSINESS_KEY);
-
-        //Then
-        verify(eventBus).publish(eventCaptor.capture());
-        var capturedEvent = eventCaptor.getValue();
-        assertThat(capturedEvent).isInstanceOf(CorrelateMessageEvent.class);
-
-        var correlateEvent = (CorrelateMessageEvent) capturedEvent;
-        assertThat(correlateEvent.messageName).isEqualTo(MESSAGE_NAME);
-        assertThat(correlateEvent.businessKey).isEqualTo(BUSINESS_KEY);
-        assertThat(correlateEvent.correlationKeys).isEmpty();
-        assertThat(correlateEvent.processVariables).isEmpty();
-    }
-
-    @Test
-    @DisplayName("Should correlate message with correlation keys only")
-    void shouldCorrelateMessageWithCorrelationKeysOnly() {
-        //When
-        runtimeService.correlateMessage(MESSAGE_NAME, CORRELATION_KEYS);
-
-        //Then
-        verify(eventBus).publish(eventCaptor.capture());
-        var capturedEvent = eventCaptor.getValue();
-        assertThat(capturedEvent).isInstanceOf(CorrelateMessageEvent.class);
-
-        var correlateEvent = (CorrelateMessageEvent) capturedEvent;
-        assertThat(correlateEvent.messageName).isEqualTo(MESSAGE_NAME);
-        assertThat(correlateEvent.businessKey).isNull();
-        assertThat(correlateEvent.correlationKeys).isEqualTo(CORRELATION_KEYS);
-        assertThat(correlateEvent.processVariables).isEmpty();
-    }
-
-    @Test
-    @DisplayName("Should correlate message with business key and process variables")
-    void shouldCorrelateMessageWithBusinessKeyAndProcessVariables() {
-        //When
-        runtimeService.correlateMessage(MESSAGE_NAME, BUSINESS_KEY, VARIABLES);
-
-        //Then
-        verify(eventBus).publish(eventCaptor.capture());
-        var capturedEvent = eventCaptor.getValue();
-        assertThat(capturedEvent).isInstanceOf(CorrelateMessageEvent.class);
-
-        var correlateEvent = (CorrelateMessageEvent) capturedEvent;
-        assertThat(correlateEvent.messageName).isEqualTo(MESSAGE_NAME);
-        assertThat(correlateEvent.businessKey).isEqualTo(BUSINESS_KEY);
-        assertThat(correlateEvent.correlationKeys).isEmpty();
-        assertThat(correlateEvent.processVariables).isEqualTo(VARIABLES);
-    }
-
-    @Test
-    @DisplayName("Should correlate message with correlation keys and process variables")
-    void shouldCorrelateMessageWithCorrelationKeysAndProcessVariables() {
-        //When
-        runtimeService.correlateMessage(MESSAGE_NAME, CORRELATION_KEYS, VARIABLES);
-
-        //Then
-        verify(eventBus).publish(eventCaptor.capture());
-        var capturedEvent = eventCaptor.getValue();
-        assertThat(capturedEvent).isInstanceOf(CorrelateMessageEvent.class);
-
-        var correlateEvent = (CorrelateMessageEvent) capturedEvent;
-        assertThat(correlateEvent.messageName).isEqualTo(MESSAGE_NAME);
-        assertThat(correlateEvent.businessKey).isNull();
-        assertThat(correlateEvent.correlationKeys).isEqualTo(CORRELATION_KEYS);
-        assertThat(correlateEvent.processVariables).isEqualTo(VARIABLES);
-    }
-
-    @Test
-    @DisplayName("Should correlate message with all parameters")
-    void shouldCorrelateMessageWithAllParameters() {
-        //When
-        runtimeService.correlateMessage(MESSAGE_NAME, BUSINESS_KEY, CORRELATION_KEYS, VARIABLES);
-
-        //Then
-        verify(eventBus).publish(eventCaptor.capture());
-        var capturedEvent = eventCaptor.getValue();
-        assertThat(capturedEvent).isInstanceOf(CorrelateMessageEvent.class);
-
-        var correlateEvent = (CorrelateMessageEvent) capturedEvent;
-        assertThat(correlateEvent.messageName).isEqualTo(MESSAGE_NAME);
-        assertThat(correlateEvent.businessKey).isEqualTo(BUSINESS_KEY);
-        assertThat(correlateEvent.correlationKeys).isEqualTo(CORRELATION_KEYS);
-        assertThat(correlateEvent.processVariables).isEqualTo(VARIABLES);
-    }
-
-    private Process createTestProcess() {
-        return Process.builder()
-                .id("process-id")
-                .businessKey(BUSINESS_KEY)
-                .state(ProcessState.ACTIVE)
-                .definition(processDefinition)
-                .createdAt(LocalDateTime.now())
-                .updatedAt(LocalDateTime.now())
-                .startedAt(LocalDateTime.now())
-                .build();
+        // Then
+        var captor = ArgumentCaptor.forClass(CorrelateMessageCommand.class);
+        verify(dispatcher).dispatch(captor.capture());
+        var command = captor.getValue();
+        assertThat(command.messageName()).isEqualTo(messageName);
+        assertThat(command.businessKey()).isEqualTo(businessKey);
+        assertThat(command.correlationKeys()).isEqualTo(correlationKeys);
+        assertThat(command.processVariables()).isEqualTo(processVariables);
     }
 
 }
